name:                foldbanner
version:             0.1.0.4
synopsis:            Folding@home banner generator.
description:         Foldbanner is a utility for generating Folding@home banners for users and teams.  It uses a YAML configuration file containing the keys and positioning for the text on the banner.
license:             MIT
license-file:        LICENSE
author:              David Shere
-- maintainer:          
copyright:           (c) 2012-2013 David Shere
-- category:            
build-type:          Simple
cabal-version:       >=1.8

executable foldbanner
  main-is:             Main.hs
  -- other-modules:       
  build-depends:       base ==4.6.*, bytestring ==0.10.*, containers ==0.5.*, yaml-light ==0.1.*, split ==0.2.*, cairo ==0.12.*, download-curl ==0.1.*, cmdargs ==0.10.*, directory ==1.2.*, xml ==1.3.*
  hs-source-dirs:      src
